--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> THE Calculator for HCI class v1 </title>
 	<style type = "text/css">
 	    h1 {
@@ -253,7 +254,6 @@
 			font: bold; 17px sans-serif;
             border-radius: 10px;
 		}
-		
 	</style>
 </head>
 <body>
